Limit SPeL getValue to SimpleEvaluationContext